# Templates

./: .gitignore  MyLogger.py  README.md  TemplateA.py  TemplateClass.py  getopts-sample.sh  my_logger.py
.mypy_cache/3.7/: MyLogger.data.json  MyLogger.meta.json  _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  io.meta.json  mmap.meta.json  posix.meta.json  string.meta.json  sys.meta.json  threading.meta.json  time.meta.json  types.meta.json  typing.meta.json
.mypy_cache/3.7/collections/: __init__.meta.json  abc.meta.json
.mypy_cache/3.7/importlib/: __init__.meta.json  abc.meta.json  machinery.meta.json  util.meta.json
.mypy_cache/3.7/logging/: __init__.meta.json
.mypy_cache/3.7/os/: __init__.meta.json  path.meta.json
pkg-template1/: Mypkg.in  Mypkg1.in  README.md  install.sh  setup.py
pkg-template1/mypkg/: __main__.py  webapp.py
pkg-template1/mypkg1/: __init__.py  __main__.py  handler1.py  mod1.py  webapp.py  wshandler1.py
pkg-template1/webroot/static/js/: my.js
pkg-template1/webroot/templates/: page1.html
pkg1/: README.md  entry_points.cfg  install.sh  setup.cfg
pkg1/pkg1/: __init__.py  __main__.py  cmd2.py  cmd3.py  mod1.py  my_logger.py
pkg2/: Pkg2.src  README.md  install.sh  setup.cfg
pkg2/pkg2/: __init__.py  __main__.py  webapp.py
pkg2/webroot/templates/: page1.html
