[metadata]
name = pkg1
version = attr: pkg1.__version__
author = Yoichi Tanibayashi
author_email = yoichi@tanibayashi.jp
description = pkg1: Python package templates
long_description = file: README.md
url = https://github.com/ytani01/Template.git
license = MIT
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    
[options]
zip_safe = False
packages = find:
install_requires =
    click
entry_points = file: entry_points.cfg
